...
                    contentPadding: EdgeInsets.zero,
                    leading: Radio<String>(
                      value: 'Balcão',
                      groupValue: controller.formData.modalidadeEntrega,
                      onChanged: (value) => controller.updateModalidadeEntrega(value!),
                    ),
                    title: const Text('Balcão (retirada no centro de atendimento)', softWrap: true),
                  ),
                  // Adicione outros Rádios aqui (ex: Entrega por Veículo)
                ],
              ),
            ),
            Positioned(
...
