...
                  width: isSmallScreen ? constraints.maxWidth * 0.4 : 180,
                  child: TextButton.icon(
                    onPressed: onAddTap,
                    icon: const Icon(Icons.add, color: Colors.white),
                    style: const ButtonStyle(
                        backgroundColor: WidgetStatePropertyAll(Colors.green)),
                    label: const Text('Adicionar material',
                        style: TextStyle(
                            color: Colors.white, fontWeight: FontWeight.bold)),
                  ),
                ),
                const SizedBox(width: 15),
                SizedBox(
...
