...
                                : null,
                            style: ElevatedButton.styleFrom(
                                backgroundColor: Colors.blue,
                                padding: const EdgeInsets.symmetric(vertical: 15)),
                            child: controller.isSubmitting
                                ? const CircularProgressIndicator(color: Colors.white)
                                : const Text('FINALIZAR REQUISIÇÃO',
                                    style: TextStyle(
                                        color: Colors.white,
                                        fontSize: 18,
                                        fontWeight: FontWeight.bold))),
                      ),
                      const SizedBox(height: 50.0)
...
